# boinc-rpi

./: README.md
boinc/: README.md
boinc/boinc_6.12.34/: Makefile.in  aclocal.m4  config.status  configure  libtool
boinc/boinc_6.12.34/api/: Makefile  Makefile.in
boinc/boinc_6.12.34/api/.deps/: boinc_api.Plo  graphics2_util.Plo  reduce_main.Plo
boinc/boinc_6.12.34/apps/: Makefile  Makefile.in
boinc/boinc_6.12.34/autom4te.cache/: traces.2
boinc/boinc_6.12.34/client/: Makefile
boinc/boinc_6.12.34/client/.deps/: boinc_client-app.Po  boinc_client-app_graphics.Po  boinc_client-app_start.Po  boinc_client-auto_update.Po  boinc_client-check_state.Po  boinc_client-client_msgs.Po  boinc_client-client_state.Po  boinc_client-coproc_detect.Po  boinc_client-cpu_sched.Po  boinc_client-cs_account.Po  boinc_client-cs_proxy.Po  boinc_client-cs_scheduler.Po  boinc_client-cs_statefile.Po  boinc_client-cs_trickle.Po  boinc_client-dhrystone.Po  boinc_client-dhrystone2.Po  boinc_client-file_names.Po  boinc_client-file_xfer.Po  boinc_client-log_flags.Po  boinc_client-main.Po  boinc_client-net_stats.Po  boinc_client-sandbox.Po  boinc_client-scheduler_op.Po  boinc_client-time_stats.Po
boinc/boinc_6.12.34/client/scripts/: Makefile.in  boinc-client
boinc/boinc_6.12.34/clientgui/res/: Makefile.in
boinc/boinc_6.12.34/clientscr/: Makefile
boinc/boinc_6.12.34/db/: Makefile  Makefile.in
boinc/boinc_6.12.34/doc/: Makefile
boinc/boinc_6.12.34/doc/manpages/: Makefile.in
boinc/boinc_6.12.34/lib/: Makefile.am  Makefile.in
boinc/boinc_6.12.34/lib/.deps/: libboinc_crypt_la-crypt.Plo  libboinc_la-cert_sig.Plo  libboinc_la-coproc.Plo  libboinc_la-gui_rpc_client.Plo  libboinc_la-hostinfo.Plo  libboinc_la-md5_file.Plo  libboinc_la-msg_log.Plo  libboinc_la-network.Plo  libboinc_la-parse.Plo  libboinc_la-shmem.Plo  libboinc_la-str_util.Plo  libboinc_la-url.Plo  libboinc_la-util.Plo
boinc/boinc_6.12.34/py/: Makefile  Makefile.in
boinc/boinc_6.12.34/py/Boinc/: version.py
boinc/boinc_6.12.34/sched/: Makefile.in
boinc/boinc_6.12.34/test/: version.inc
boinc/boinc_6.12.34/tools/: Makefile
boinc/boinc_7.1.0/: Makefile  config.h.in  config.status  configure  libtool
boinc/boinc_7.1.0/api/: Makefile
boinc/boinc_7.1.0/api/.deps/: boinc_api.Plo  boinc_opencl.Plo  graphics2_util.Plo  reduce_main.Plo
boinc/boinc_7.1.0/apps/: Makefile  Makefile.in
boinc/boinc_7.1.0/autom4te.cache/: requests  traces.0
boinc/boinc_7.1.0/clientscr/: Makefile  Makefile.in
boinc/boinc_7.1.0/db/: Makefile  Makefile.in
boinc/boinc_7.1.0/doc/: Makefile.in
boinc/boinc_7.1.0/lib/: Makefile  Makefile.in
boinc/boinc_7.1.0/locale/: Makefile
boinc/boinc_7.1.0/m4/: Makefile  Makefile.in
boinc/boinc_7.1.0/test/: Makefile
project_pogs/bins/: app_info.xml  concat  fit_sed
project_seti/: Makefile.in  README.md  aclocal.m4  config.status  configure.ac
project_seti/autom4te.cache/: requests  traces.0  traces.1
project_seti/client/: Makefile  analyzeReport.cpp  progress.cpp  setiathome-7.0.armv6l-unknown-linux-gnu
project_seti/client/.deps/: hires_timer_test-hires_timer.Po  seti_boinc-analyzeFuncs.Po  seti_boinc-analyzeFuncs_sse.Po  seti_boinc-analyzeFuncs_x86_64.Po  seti_boinc-analyzePoT.Po  seti_boinc-analyzeReport.Po  seti_boinc-autocorr.Po  seti_boinc-fft8g.Po  seti_boinc-malloc_a.Po  seti_boinc-pulsefind.Po  seti_boinc-seti.Po  seti_boinc-spike.Po  seti_boinc-sqlblob.Po  seti_boinc-sqlrow.Po  seti_boinc-timecvt.Po
project_seti/client/win_build/: seti_boinc.dev
project_seti/db/: schema_master.cpp  schema_to_class
project_seti/db/tools/: Makefile
project_seti/jpeglib/: Makefile  Makefile.in
project_seti/splitter_old/: dotransform.cpp
project_seti/tools/: Makefile  Makefile.am
project_seti/tools/.deps/: fakedata-fakedata.Po  fakedata-seti_header.Po  workunit_resample-seti_header.Po  workunit_resample-sqlrow.Po
src/boinc/boinc_6.12.34/: Makefile  config.h  config.h.in  configure.ac
src/boinc/boinc_7.1.0/: Makefile.in  aclocal.m4  config.h
src/project_oprojectalx/: alx.cpp  compile.sh
src/project_pogs/bins/: wrapper
src/project_seti/: Makefile  app_info.xml  configure  libtool  sah_config.h  sah_config.h.in
src/project_seti/assimilator/: Makefile  Makefile.in
src/project_seti/autom4te.cache/: output.1
src/project_seti/client/: Makefile.am  Makefile.in  analyzeFuncs.cpp  main.cpp  seti.cpp
src/project_seti/db/: Makefile  schema_master.h  schema_master.sql  xml_util.cpp
src/project_seti/splitter/: Makefile  Makefile.in  dotransform.cpp  mb_dotransform.cpp
src/project_seti/splitter_old/: polyphase.cpp
src/project_seti/tools/: Makefile.in
src/project_seti/validate/: Makefile
src/project_subsetsum/: CMakeLists.txt  README
src/project_subsetsum/client/: CMakeLists.txt  compile.sh  stderr.txt  subset_sum_main.cpp
src/project_subsetsum/client/lib/: config.h
src/project_subsetsum/common/: CMakeLists.txt  binary_output.cpp  bit_logic.hpp  n_choose_k.cpp  n_choose_k.hpp
src/project_subsetsum/php/: index.php  navigation.php  need.php  style.css
src/project_subsetsum/server/: CMakeLists.txt  sss_assimilation_policy.cxx  sss_validation_policy.cxx  sss_webpage_generator.cxx  sss_work_generator.cxx
src/project_wuprop/: compile.sh  data_collect.cpp
(+247 files in other folders)
